# stablecoin-casper

./: CHANGELOG.md  Cargo.toml  Odra.toml  README.md
src/: cep18_token.rs  lib.rs  stablecoin.rs  stablecoin_contract.rs
src/cep18/: cep18_client_contract.rs  errors.rs  events.rs  storage.rs  utils.rs
src/cep18/tests/: allowance.rs  mint_and_burn.rs  mod.rs  permissions.rs  transfer.rs
src/stablecoin/: cep18_client_contract.rs  errors.rs  events.rs  mod.rs  storage.rs  utils.rs
src/stablecoin/tests/: allowance.rs  client_contract_test.rs  mint_and_burn.rs  mod.rs  permissions.rs  transfer.rs
