[package]
name = "stablecoin-casper"
version = "0.1.0"
edition = "2021"

[dependencies]
odra = { version = "1.1.0", features = [], default-features = false }
base64 = { version = "0.22.0", default-features = false, features = ["alloc"] }

[dev-dependencies]
odra-test = { version = "1.1.0", features = [], default-features = false }

[build-dependencies]
odra-build = { version = "1.1.0", features = [], default-features = false }

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
odra-build = { version = "1.1.0", features = [], default-features = false }

[[bin]]
name = "stablecoin_casper_build_contract"
path = "bin/build_contract.rs"
test = false

[[bin]]
name = "stablecoin_casper_build_schema"
path = "bin/build_schema.rs"
test = false

[profile.release]
codegen-units = 1
lto = true

[profile.dev.package."*"]
opt-level = 3
